# tree-sitter-ca65

./: .gitattributes  .gitignore  Cargo.toml  README.md  grammar.js  package-lock.json  package.json  tree-sitter.json
bindings/rust/: build.rs  lib.rs
docs/: test-coverage.md
docs/superpowers/plans/: 2026-06-17-ca65-test-coverage-pass.md  2026-06-17-fix-ca65-coverage-failures.md  2026-06-17-modernize-tree-sitter-ca65.md  2026-06-17-slim-modern-tree-sitter-layout.md  2026-06-18-ca65-grammar-precision-roadmap.md
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: addressing-modes.tst  block-structure.tst  cpu-modes.tst  define.tst  directives-data.tst  examples.txt  expression-structure.tst  expressions.tst  extras.tst  fields-structure.tst  instr.tst  labels.tst  line-classification.tst  macros-control.tst  macros.tst  operand-structure.tst  operands.tst  procs.tst  structs-unions.tst  symbols-scopes.tst
test/highlight/: basic.asm  coverage.asm
