[package]
name = "tree-sitter-ca65"
description = "ca65 grammar for the tree-sitter parsing library"
version = "0.1.0"
keywords = ["incremental", "parsing", "ca65"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/bgevko/tree-sitter-ca65"
edition = "2021"
license = "MIT"
build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[dev-dependencies]
tree-sitter = "0.26.9"

[build-dependencies]
cc = "1.1"
